--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
+							<span class="image main"><img src="background1.jpg" alt="" /></span>
 							<span class="icon fa-gem"></span>
 						</div>
 						<div class="content">
