--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="Profile Picture.png" alt="" /></span>
+								<span class="image main"><img src="background1.jpg" alt="" /></span>
 								<p>Hi, I'm Josh Kiddle. I'm currently studying Games Development at Staffordshire University.</p>
 							</article>
 
