added links to about section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="background1.jpg" alt="" /></span>
 								<p>Hi, I'm Josh Kiddle. I'm currently studying Games Development at Staffordshire University.</p>
+								<a href="https://www.linkedin.com/in/josh-kiddle-55b949194/">LINKEDIN</a> ||| <a href="https://twitter.com/kiddle_josh">TWITTER</a>
 							</article>
 
 						<!-- Contact -->
