--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="fab fa-linkedin"><span class ="label">LinkedIn</span<>/a></li>
+									<li><a href="#" class="icon brands fa-linkedin"><span class ="label">LinkedIn</span<>/a></li>
 								</ul>
 							</article>
 
@@ -147,7 +147,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="fab fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										
 									</ul>
 
