added links to icons

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands fa-linkedin"><span class ="label">LinkedIn</span<>/a></li>
+									<li><a href="https://twitter.com/kiddle_josh" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://github.com/JoshKiddle" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" class="icon brands fa-linkedin"><span class ="label">LinkedIn</span<>/a></li>
 								</ul>
 							</article>
 
@@ -145,9 +145,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://twitter.com/kiddle_josh" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://github.com/JoshKiddle" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										
 									</ul>
 
