--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; <a>joshkiddle.github.io</a</p>
+						<p class="copyright">&copy; <a>Josh Kiddle 2019</a</p>
 					</footer>
 
 			</div>
