--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="pacman website image.png" alt="" /></span>
 								<h3 class="major">Pacman</h1>
 								<p>One of my first assignments at university was to create a Pacman inspired game in C++.</p>
 							</article>
