fixing linkedin link and pacman image

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="pacmanimage2.png" alt="" /></span>
+								<span class="image main"><img src="pacmanimage2.PNG" alt="" /></span>
 								<h3 class="major">Pacman</h1>
 								<p>One of my first assignments at university was to create a Pacman inspired game in C++.</p>
 							</article>
@@ -67,7 +67,7 @@
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="background1.jpg" alt="" /></span>
 								<p>Hi, I'm Josh Kiddle. I'm currently studying Games Development at Staffordshire University.</p>
-								<a href="https://www.linkedin.com/in/josh-kiddle-55b949194/">LINKEDIN</a> ||| <a href="https://twitter.com/kiddle_josh">TWITTER</a>
+								<a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank">LINKEDIN</a> ||| <a href="https://twitter.com/kiddle_josh">TWITTER</a>
 							</article>
 
 
