fixed all links

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 							</ul>
 						</nav>
 						<ul class="icons">
-									<li><a href="https://twitter.com/kiddle_josh" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://github.com/JoshKiddle" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" class="icon brands fa-linkedin"><span class ="label">LinkedIn</span<>/a></li>
+									<li><a href="https://twitter.com/kiddle_josh" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://github.com/JoshKiddle" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank" class="icon brands fa-linkedin"><span class ="label">LinkedIn</span<>/a></li>
 								</ul>
 					</header>
 
@@ -67,7 +67,7 @@
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="background1.jpg" alt="" /></span>
 								<p>Hi, I'm Josh Kiddle. I'm currently studying Games Development at Staffordshire University.</p>
-								<a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank">LINKEDIN</a> ||| <a href="https://twitter.com/kiddle_josh">TWITTER</a>
+								<a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank">LINKEDIN</a> ||| <a href="https://twitter.com/kiddle_josh" target="_blank">TWITTER</a>
 							</article>
 
 
@@ -129,9 +129,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="https://twitter.com/kiddle_josh" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="https://github.com/JoshKiddle" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://twitter.com/kiddle_josh" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://github.com/JoshKiddle" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" targer="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										
 									</ul>
 
