--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="pacmanimage2.PNG" alt="" /></span>
 								<h3 class="major">Pacman</h1>
-								<p>One of my first assignments at university was to create a Pacman inspired game in C++.</p>
+								<p>IN the first semester of university I had an assignment in which we were to create a Pacman inspired games using C++.</p>
 							</article>
 
 						<!-- About -->
