undid changes to about image

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="profilecircle.png" width = "5" height = "50" alt="" /></span>
+								<span class="image main"><img src="profilecircle.png" alt="" /></span>
 								<p>Hi, I'm Josh Kiddle. I'm currently studying Games Development at Staffordshire University.</p>
 								<a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank">LINKEDIN</a> ||| <a href="https://twitter.com/kiddle_josh" target="_blank">TWITTER</a>
 							</article>
