fixed about image link and spelling mistake

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="pacmanimage2.PNG" alt="" /></span>
 								<h3 class="major">Pacman</h1>
-								<p>IN the first semester of university I had an assignment in which we were to create a Pacman inspired games using C++.</p>
+								<p>In the first semester of university I had an assignment in which we were to create a Pacman inspired games using C++.</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="aboutimage.png" alt="" /></span>
+								<span class="image main"><img src="aboutimage.PNG" alt="" /></span>
 								<p>Hi, I'm Josh Kiddle. I'm currently studying Games Development at Staffordshire University.</p>
 								<a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank">LINKEDIN</a> ||| <a href="https://twitter.com/kiddle_josh" target="_blank">TWITTER</a>
 							</article>
