--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							</ul>
 						</nav>
 						<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank" class="icon brands fa-linkedin"><span class ="label">LinkedIn</span<>/a></li>		
+									<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank" class="icon brands fa-github"><span class ="label">LinkedIn</span<>/a></li>		
 									<li><a href="https://twitter.com/kiddle_josh" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://github.com/JoshKiddle" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
@@ -128,7 +128,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" targer="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank" class="icon brands fa-github"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://twitter.com/kiddle_josh" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="https://github.com/JoshKiddle" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 										
