edited work text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="pacmanimage2.PNG" alt="" /></span>
 								<h3 class="major">Pacman</h1>
-								<p>In the first semester of university I had an assignment in which we were to create a Pacman inspired games using C++.</p>
+								<p>In the first semester of university I had an assignment in which we had to create a Pacman inspired game using C++.</p>
 							</article>
 
 						<!-- About -->
