--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="" alt="" /></span>
-								<p></p>
+								<p>Hi, I'm Josh Kiddle, a games development student at Staffordshire University. Welcome to my website, this is where any previous work goes and you can get into contact with me on any of the linked social media profiles on here.</p>
 							</article>
 
 						<!-- Work -->
@@ -65,7 +65,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="aboutimage.PNG" alt="" /></span>
-								<p>Hi, I'm Josh Kiddle. I'm currently studying Games Development at Staffordshire University.</p>
+								<p>Hi, I'm Josh Kiddle. I've been playing games for as long as I remember and my interest in them never waned. So naturally, I'm now studying games development at Staffordshire University.</p>
 								<a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank">LINKEDIN</a> ||| <a href="https://twitter.com/kiddle_josh" target="_blank">TWITTER</a>
 							</article>
 
