--- a/index.html
+++ b/index.html
@@ -315,7 +315,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- BG -->
-			div id="bg"><img src="arcadebg.jpg" alt="" />"></div>
+			<!--div id="bg"><img src="arcadebg.jpg" alt="" />"></div>-->
+			<span class="image main"><img src="arcadebg.jpg" alt="" /></span>
 			
 
 		<!-- Scripts -->
