added a placeholder to work section

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="pacmanimage2.PNG" alt="" /></span>
-								<h3 class="major">Pacman</h1>
+								<h3 class="major">Pacman</h3>
 								<p>In the first semester of university I had an assignment in which we had to create a Pacman inspired game using C++.</p>
+								<h3 class="major">Placeholder</h3>
+								<p>Placeholder for a future project.</p>
 							</article>
 
 						<!-- About -->
