changed background image

--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- BG -->
-			<!--div id="bg"><img src="arcadebg.jpg" alt="" />"></div>-->
-			<span class="image main"><img src="arcadebg.jpg" alt="" /></span>
+			<div id="bg"><img src="arcadebg.jpg" alt="" />"></div>
+			
 			
 
 		<!-- Scripts -->
