--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- BG -->
-			<div id="arcadebg.jpg"></div>
+			<div id="bg"></div>
 			
 			
 
