--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- BG -->
+			<span class="image main"><img src="arcadebg.jpg" alt="" /></span>
 			<div id="bg"></div>
 			
 			
