--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- BG -->
 			<span class="image main"><img src="arcadebg.jpg" alt="" /></span>
-			<div id="bg"></div>
+			<!--<div id="bg"></div>-->
 			
 			
 
