--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 -->
 <html>
 	<head>
-		background-image: url("arcadebg.jpg");
 		<title>Josh Kiddle</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -318,7 +317,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- BG -->
-			<!--<span class="image main"><img src="arcadebg.jpg" alt="" /></span>-->
+			<span class="bg"><img src="arcadebg.jpg" alt="" /></span>
 			<!--<div id="bg"></div>-->
 			
 			
