fixed background image

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- BG -->
-			<span class="bg"><img src="arcadebg.jpg" alt="" /></span>
+			<div style="background-image: url('arcadebg.jpg');">
 			<!--<div id="bg"></div>-->
 			
 			
