--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+		background-image: url('arcadebg.jpg');
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -317,7 +318,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- BG -->
-			<div style="background-image: url('arcadebg.jpg');">
 			<!--<div id="bg"></div>-->
 			
 			
