--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-		background-image: url('arcadebg.jpg');
+		<style>
+		body {
+  			background-image: url('img_girl.jpg');
+		     }
+		</style>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
