--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body class="is-preload">
 		<style>
 		body {
-  			background-image: url('img_girl.jpg');
+  			background-image: url('arcadebg.jpg');
 		     }
 		</style>
 
