--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 		<style>
 		body {
   			background-image: url('arcadebg.jpg');
+			background-repeat: no-repeat;
+ 		 	background-attachment: fixed; 
+  			background-size: cover;
 		     }
 		</style>
 
