changed background image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body class="is-preload">
 		<style>
 		body {
-  			background-image: url('arcadebg.jpg');
+  			background-image: url('mountainbg.jpg');
 			background-repeat: no-repeat;
  		 	background-attachment: fixed; 
   			background-size: cover;
