--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="pacmanimage2.PNG" alt="" /></span>
+								<span class="image main"><img src="pacmanimage2.PNG" width= "200" height= "121" alt="" /></span>
 								<h3 class="major">Pacman</h3>
 								<p>In the first semester of university I had an assignment in which we had to create a Pacman inspired game using C++.</p>
 								<h3 class="major">Placeholder</h3>
