added about image

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="" alt="" /></span>
+								<span class="image main"><img src="aboutimage4" alt="" /></span>
 								<p>Hi, I'm Josh Kiddle. I've been playing games for as long as I remember and my interest in them never waned. So naturally, I'm now studying games development at Staffordshire University.</p>
 								<a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank">LINKEDIN</a> ||| <a href="https://twitter.com/kiddle_josh" target="_blank">TWITTER</a>
 							</article>
