changed linkedin icon

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							</ul>
 						</nav>
 						<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank" class="fab fa-linkedin"><span class ="label">LinkedIn</span<>/a></li>		
+									<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank" class="fab fa-linkedin-in"><span class ="label">LinkedIn</span<>/a></li>		
 									<li><a href="https://twitter.com/kiddle_josh" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://github.com/JoshKiddle" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
