--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 							</ul>
 						</nav>
 						<ul class="icons">
-									<!--<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank" class="icon brands fa-linkedin"><span class ="label">LinkedIn</span<>/a></li>-->		
+									<li><a href="https://www.linkedin.com/in/josh-kiddle-55b949194/" target="_blank" class="icon brands fa-linkedin"><span class ="label">LinkedIn</span<>/a></li>
 									<li><a href="https://twitter.com/kiddle_josh" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://github.com/JoshKiddle" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://wwww.linkedin.com/in/josh-kiddle-55b949194/" target=" _blank" class="icon brands fa-linkedin"><span class = "label">LinkedIn</span></li>
+									<!--<li><a href="https://wwww.linkedin.com/in/josh-kiddle-55b949194/" target=" _blank" class="icon brands fa-linkedin"><span class = "label">LinkedIn</span></li>-->
 								</ul>
 					</header>
 
