--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
+								<h3 class="major">Mobile Platformer</h3>
+								<p>A project that I worked on in my final year in university. The brief was to develop a game targeted at either Android or iOS, I chose to target Android as the hardware I had access to was more suitable for this. I used Unity's Android development features for the game. </p>
 								<span class="image main"><img src="pacmanimage2.PNG" alt="" /></span>
-								<h3 class="major">Pacman</h3>
-								<p>In the first semester of university I had an assignment in which we had to create a Pacman inspired game using C++.</p>
+								
 								<h3 class="major">Placeholder</h3>
 								<p>Placeholder for a future project.</p>
 							</article>
