Revert "resize video"
This reverts commit 68a4468a0c703d9ffb8c3a2febd8231c680d68f4.

--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@
 								<h3 class="major">Mobile Platformer</h3>
 								<p>A project that I worked on in my final year in university. The brief was to develop a game targeted at either Android or iOS, I chose to target Android as the hardware I had access to was more suitable for this. I used Unity's Android development features for the game. </p>
 								<!--<span class="image main"><img src="pacmanimage2.PNG" alt="" /></span>-->
-								<!--<span class="video main"><video src="StartLevelCombat.mp4" alt="" /></span>-->
-								<video width="320" height="240" controls>
-									<source src="StartLevelCombat.mp4" type="video/mp4">
-								</video>
+								<span class="video main"><video src="StartLevelCombat.mp4" alt="" /></span>
 								
 								<h3 class="major">Placeholder</h3>
 								<p>Placeholder for a future project.</p>
