--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 								<h2 class="major">Work</h2>
 								<h3 class="major">Mobile Platformer</h3>
 								<p>A project that I worked on in my final year in university. The brief was to develop a game targeted at either Android or iOS, I chose to target Android as the hardware I had access to was more suitable for this. I used Unity's Android development features for the game. </p>
-								<!--<span class="image main"><img src="pacmanimage2.PNG" alt="" /></span>-->
-								<span class="video main"><video src="StartLevelCombat.mp4" alt="" /></span>
+								<span class="image main"><img src="MobileScreenshot.PNG" alt="" /></span>
+								<!--<span class="video main"><video src="StartLevelCombat.mp4" alt="" /></span>-->
 								
 								<h3 class="major">Placeholder</h3>
 								<p>Placeholder for a future project.</p>
